--- a/webroot/index.html
+++ b/webroot/index.html
@@ -6,9 +6,11 @@
 </head>
 <body>
 KRY status poller
-<ul id="service-list">
-</ul>
-<input type="text" id="url-name">
+<table id="service-list">
+
+</table>
+<input type="text" id="url-name" placeholder="URL">
+<input type="text" id="name" placeholder="Name">
 <button id="post-service">Save</button>
 
 </body>
